contracts/escrow/test_output.txt
cargo :    Compiling 
escrow v0.1.0 (C:\Users\
ADMIN\Desktop\midea-drip
s\Talenttrust-Contracts\
contracts\escrow)
At line:1 char:1
+ cargo test 2>&1 | 
Out-File -FilePath 
test_output.txt 
-Encoding ascii
+ ~~~~~~~~~~~~~~~
    + CategoryInfo      
        : NotSpecified  
  : (   Compiling es.   
 ..ntracts\escrow):S    
tring) [], RemoteEx    
ception
    + FullyQualifiedErr 
   orId : NativeComman  
  dError
 
warning: unused 
imports: 
`ContractStatus` and 
`EscrowError`
  --> contracts\escrow\s
rc\test.rs:23:13
   |
23 | use 
crate::{ContractStatus, 
EscrowError, Escrow, 
EscrowClient};
   |             
^^^^^^^^^^^^^^  
^^^^^^^^^^^
   |
   = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

error[E0369]: binary 
operation `==` cannot 
be applied to type 
`soroban_sdk::Val`
   --> contracts\escrow\
src\test.rs:188:43
    |
188 |         t.len() > 
0 && t.get(0).map(|v| v 
== symbol_short!("refund
").into_val(&env)).unwra
p_or(false)
    |                   
                      - 
^^ ---------------------
----------------- _
    |                   
                      |
    |                   
                      
soroban_sdk::Val
    |
note: 
`soroban_sdk::Val` does 
not implement 
`PartialEq<_>`
   --> C:\Users\ADMIN\.c
argo\registry\src\index.
crates.io-1949cf8c6b5b55
7f\soroban-env-common-22
.1.3\src\val.rs:249:1
    |
249 | pub struct 
Val(u64);
    | ^^^^^^^^^^^^^^ 
`soroban_sdk::Val` is 
defined in another crate

For more information 
about this error, try 
`rustc --explain E0369`.
warning: `escrow` (lib 
test) generated 1 
warning
error: could not 
compile `escrow` (lib 
test) due to 1 previous 
error; 1 warning emitted
